app/assets/scss/components/_page-header.scss
@use "../abstracts/mixins" as *;
@use "../abstracts/variables" as *;

.page-header {
  @include flex-column;
  position: relative;
  padding: 6rem;
  border-bottom: 0.5px solid rgba($bronze, 0.4);
  background-color: transparent;

  &__content {
    @include flexCenter;
    @include flex-column;
    @include text-center;
    gap: 2rem;
  }

  &__eyebrow {
    font-size: 9px;
    letter-spacing: 0.22em;
    text-transform: uppercase;
    color: $bronze;
  }

  &__title {
    font-family: $h1-to-h6-font-family;
    font-size: 3.5rem;
    font-weight: $font-weight300;
    color: $light;
    letter-spacing: 0.02em;
    font-style: italic;
    @include text-center;
  }

  &__separator {
    display: block;
    height: 0;
    width: 5rem;
    border-top: 1px solid $bronze;
  }

  &__sub {
    font-size: 1.5rem;
    color: $light;
    line-height: 1.7;
  }

  &__actions-container {
    position: absolute;
    left: 1rem;
    bottom: -0.1rem;
    display: flex;
    align-items: center;
  }

  &__actions {
    display: flex;
    gap: 5rem;
    flex-wrap: wrap;
    align-items: center;
    flex-shrink: 0;

    z-index: 1;
  }

  @media (max-width: 780px) {
    flex-direction: column;
    align-items: flex-start;
    margin-top: 2rem;
    &__title {
      font-size: 2rem;
    }
    &__actions-container {
      overflow-x: auto;
      scrollbar-width: none;
    }
    &__actions {
      gap: 2rem;
    }
  }
}

